kubernetes/core/argo-cd/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-cluster-issuer"
    ingress.cilium.io/tls-passthrough: "enabled"
    ingress.cilium.io/force-https: "enabled"
spec:
  ingressClassName: cilium
  rules:
    - host: argocd.local.bysliek.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
  tls:
    - hosts:
        - argocd.local.bysliek.com
      secretName: argocd-server-tls
